--- a/Module_5/productproject/templates/updatedata.html
+++ b/Module_5/productproject/templates/updatedata.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome | Index</title>
+    <title>My update dtata page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -17,7 +17,7 @@
     <center>
         <h1
             style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
-            Welcome to my product page</h1>
+            Update Userinfo</h1>
     </center>
     <hr>
     <div class="container">
@@ -25,12 +25,12 @@
             {% csrf_token %}
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">productname</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="" name="productname" >   
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="" name="productname"  value="{{user.productname}}">   
               </div>
               <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">productprice</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="" name="productprice">
-              </div><select class="form-select" name="productrame" aria-label="Default select example">
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="" name="productprice" value="{{user.productprice}}">
+              </div><select class="form-select" name="productrame"  value="{{user.productrame}}"aria-label="Default select example">
                 <option selected>productrame </option>
                 <option >none</option>
                 <option >1gb</option>
@@ -45,7 +45,7 @@
               
               
               
-              <select class="form-select" aria-label="Default select example" name="productcatagory">
+              <select class="form-select" aria-label="Default select example" name="productcatagory" value="{{user.productcatagory}}">
                 <option selected>productcatagory</option>
                 <option> none</option>
                 <option>Mobile</option>
@@ -53,8 +53,11 @@
                 <option> machine</option>
                 <option> headphone</option>
               </select><br> <br>
-              <button type="submit"  value="save" class="btn btn-primary">Save</button> <a class="btn btn-warning" href="/showdata">Showdata</a>
+              <button type="submit"  value="save" class="btn btn-info">update</button>  <a class="btn btn-warning" href="/showdata">Showdata</a>
             </form>
+    </div>
+            
+        </form>
     </div>
     
 </body>
