--- a/Module_6/teastall/templates/cafes.html
+++ b/Module_6/teastall/templates/cafes.html
@@ -12,7 +12,7 @@
     crossorigin="anonymous"></script>
 </head>
 
-<body style="background-color: lightskyblue;">
+<body style="background-color:darkcyan">
  <!--- <img src="/static/img/back3.jpg" height="100%" width="100%">-->
 </body>
 
@@ -49,7 +49,7 @@
           <a class="nav-link" href="/teastore" style="color:black; text-decoration-line: underline;font-variant: var(100%);font-size:larger;"> Tea store</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="/flavors" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color:black; text-decoration-line: underline;font-variant: var(100%);font-size:larger;"  >
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color:black; text-decoration-line: underline;font-variant: var(100%);font-size:larger;"  >
             Flavours
           </a>
           <ul class="dropdown-menu" style="background-color: #F08080;">
@@ -60,10 +60,10 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link active"  href="#" style="color:black; text-decoration-line: underline;font-variant: var(100%);font-size:larger;">About</a>
+          <a class="nav-link active" href="/about"style="color:black; text-decoration-line: underline;font-variant: var(100%);font-size:larger;">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active"  href="/contact"style="color:black; text-decoration-line: underline;font-variant: var(100%);font-size:larger;" >Contact</a>
+          <a class="nav-link active"  href="/contact" style="color:black; text-decoration-line: underline;font-variant: var(100%);font-size:larger;" >Contact</a>
         </li>
       </ul>
       
