--- a/Module_6/teastall/templates/contact.html
+++ b/Module_6/teastall/templates/contact.html
@@ -24,7 +24,7 @@
 <nav class="navbar" style="background-color:#F08080;">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="/static/img/tea.jfif" width="30" height="30"style="color:black; text-decoration-line: underline;font-variant: var(100%); font-size:10vw;"> TEA STALL
+      <img src="/static/img/logo.jfif" width="30" height="30"style="color:black; text-decoration-line: underline;font-variant: var(100%); font-size:10vw;"> TEA STALL
     </a>
   </form>
 
@@ -46,7 +46,7 @@
           <a class="nav-link active" aria-current="page" href="#" style="color:black; text-decoration-line: underline;font-variant: var(100%);font-size:larger;">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/teaservice" style="color:black; text-decoration-line: underline;font-variant: var(100%);font-size:larger;"> Tea services</a>
+          <a class="nav-link" href="/teastore" style="color:black; text-decoration-line: underline;font-variant: var(100%);font-size:larger;"> Tea store</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="/flavors" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color:black; text-decoration-line: underline;font-variant: var(100%);font-size:larger;"  >
